--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -65,7 +65,7 @@
 						<!--<img id="headImg">-->
 						<span id="img" class=" iconfont subject-icon dynamic-personal-image" style="margin-left: -10px;display: none;" hidden="hidden"></span>
 						<!--</img>-->
-						<div class="mui-media-body">
+						<div class="mui-media-body" style="margin-top: 5px;">
 							<h5 id="homeworkTitle" style="color: #404040;"></h5>
 							<p id="publishDate" class='mui-ellipsis' style="color: #747474;"></p>
 						</div>
@@ -73,7 +73,7 @@
 							<hr id="hr" style="height:1px;border:none;border-top:1px solid #ededed;" />
 						</div>
 						<div class="mui-media-body">
-							<font id="homeWorkContent" style="color: #747474;"></font>
+							<p id="homeWorkContent" style="color: #747474;font-size: 15px;margin-bottom: 5px;"></p>
 							<div id="brief-imgs" class="brief-imgs"></div>
 							
 						</div>
