--- a/JiaoBaoYun-hb/html/check/news-detail.html
+++ b/JiaoBaoYun-hb/html/check/news-detail.html
@@ -7,24 +7,38 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<style>
+			.check-container {
+				position: fixed;
+				bottom: 0;
+				height: 50px;
+				width: 100%;
+			}
+		</style>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">新闻详情</h1>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">新闻详情</h1>
 		</header>
 		<!--下拉刷新容器-->
-		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
-		  <div class="mui-scroll">
-		    <!--数据列表-->
-		    <ul class="mui-table-view">
-		      
-		    </ul>
-		  </div>
+		<div class="mui-content">
+
+			<div id="news-detail">
+
+			</div>
+			<div class="check-container">
+				<p id="check-status" class="check-status display-inlineBlock"></p>
+				<button id="pass-button" type="button" class="mui-btn mui-btn-primary mui-pull-right">通过</button>
+				<button id="refuse-button" type="button" class="mui-btn mui-btn-primary mui-pull-right">拒绝</button>
+			</div>
+			<!-- <a href="#sheet" id="openSheet" class="mui-btn mui-btn-primary mui-btn-block">打开操作表</a>-->
+
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/check/news-detail.js"></script>
 	</body>
 
