--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -167,7 +167,7 @@
 
 none; margin-top: -15px;">登录</button>
 					<!--<div class="link-area">-->
-					<a id='forgetPassword' class="regesterAndForget">忘记密码?</a>
+					<!--<a id='forgetPassword' class="regesterAndForget">忘记密码?</a>-->
 					<!--<span class="spliter">|</span>-->
 					<a id='reg' class="regesterAndForget" style="float: right;">注册账号</a>
 					<!--</div>-->
