--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -54,11 +54,17 @@
 							<img src="../../image/mine/my-space.png" class="mine-icon"></img> 我的空间
 						</a>
 					</li>
+					<li id="check-news" class="mui-table-view-cell" position='8' style="display: none;">
+						<a class="mui-navigate-right">
+							<img src="../../image/mine/my-points.png" class="mine-icon"></img> 新闻审核
+						</a>
+					</li>
 					<li class="mui-table-view-cell" position='5'>
 						<a class="mui-navigate-right">
 							<img src="../../image/mine/my-points.png" class="mine-icon"></img> 积分
 						</a>
 					</li>
+					
 					<li class="mui-table-view-divider"></li>
 					<li class="mui-table-view-cell" position='6'>
 						<a class="mui-navigate-right">
@@ -116,14 +122,15 @@
 
 					console.log('click position:' + this.getAttribute('position'))
 					console.log("系统名称：" + plus.os.name);
-//					switch(parseInt(this.getAttribute('position'))) {
-//						case 0:
-//						case 1:
-//						case 2:
-//						case 3:
-//						case 4:
-//						case 6:
-//						case 7:
+					switch(parseInt(this.getAttribute('position'))) {
+						case 0:
+						case 1:
+						case 2:
+						case 3:
+						case 4:
+						case 6:
+						case 7:
+						case 8:
 							if(plus.os.name == 'Android') {
 								setTimeout(function() {
 									closeMenu();
@@ -131,10 +138,10 @@
 							} else {
 								closeMenu();
 							}
-//							break;
-//						default:
-//							break;
-//					}
+							break;
+						default:
+							break;
+					}
 
 					switch(parseInt(this.getAttribute('position'))) {
 						case 0: //群管理
@@ -166,7 +173,7 @@
 							//积分
 						case 5:
 							mui.toast('积分功能暂未开放！');
-							events.openNewWindow('/html/check/check-news.html');
+							
 							break;
 							//设置
 						case 6:
@@ -177,7 +184,9 @@
 							//							mui.toast('施工中,请稍候...');
 							events.openNewWindow('/html/mine/about.html')
 							break;
-
+						case 8://新闻审核
+							events.openNewWindow('/html/check/check-news.html');
+							break;
 						default:
 							break;
 					}
@@ -207,6 +216,10 @@
 					document.getElementById('utext').innerText = info.utxt;
 				} else {
 					document.getElementById('utext').innerText = "暂无签名";
+				}
+					document.querySelector('#check-news').style.display="block";
+				}else{
+					document.querySelector('#check-news').style.display="none";
 				}
 				getNewsAmount();
 			}
