--- a/JiaoBaoYun-hb/html/check/check-news.html
+++ b/JiaoBaoYun-hb/html/check/check-news.html
@@ -17,29 +17,28 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">审核新闻</h1>
 		</header>
-		<div class="mui-content">
+		<div class="mui-content mui-fullscreen">
 			<div>
 				<p class="display-inlineBlock">请选择地区：</p>
 				<a id="choose-area" class="choose-area" value="0">全国<span class="mui-icon mui-icon-arrowdown"></span></a>
 			</div>
 			<div id="slider" class="mui-slider margin-full">
-				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-					<div class="mui-scroll">
+				<div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted" style="height: 45px;">
+					
 						<a class="mui-control-item mui-active" href="#news-all" value="-1">
 							全部
 						</a>
 						<a class="mui-control-item" href="#news-uncheck" value="0">
-							未审
+							待审核
 						</a>
 						<a class="mui-control-item" href="#news-passed" value="1">
-							已通过
+							已显示
 						</a>
 						<a class="mui-control-item" href="#news-unpass" value="2">
-							未通过
+							已屏蔽
 						</a>
-					</div>
 				</div>
-				<div class="mui-slider-group" style="min-height: 500px;">
+				<div class="mui-slider-group">
 					<div id="news-all" class="mui-slider-item mui-control-content mui-active">
 						<div  class="mui-scroll-wrapper">
 							<div class="mui-scroll">
@@ -69,7 +68,7 @@
 					<div id="news-unpass" class="mui-slider-item mui-control-content">
 						<div class="mui-scroll-wrapper">
 							<div class="mui-scroll">
-								<ul id="unpass-list" class="mui-table-view">
+								<ul id="refused-list" class="mui-table-view">
 								</ul>
 							</div>
 						</div>
