--- a/JiaoBaoYun-hb/html/quan/space-detail.html
+++ b/JiaoBaoYun-hb/html/quan/space-detail.html
@@ -233,7 +233,7 @@
 			mui.previewImage();
 
 			var comData = {
-				userId: datasource2.PublisherId, //用户ID
+				userId: personalUTID, //用户ID
 				userSpaceId: datasource2.TabId, //发布用户ID
 				pageIndex: '1', //当前页数
 				pageSize: '100' //每页记录数
