解决滚动问题

--- a/JiaoBaoYun-hb/html/check/check-news.html
+++ b/JiaoBaoYun-hb/html/check/check-news.html
@@ -40,7 +40,7 @@
 				</div>
 				<div class="mui-slider-group">
 					<div id="news-all" class="mui-slider-item mui-control-content mui-active">
-						<div  class="mui-scroll-wrapper">
+						<div  class="news-all mui-scroll-wrapper">
 							<div class="mui-scroll">
 								<ul id="all-list" class="mui-table-view">
 								</ul>
@@ -48,7 +48,7 @@
 						</div>
 					</div>
 					<div id="news-uncheck" class="mui-slider-item mui-control-content">
-						<div class="mui-scroll-wrapper">
+						<div class="news-uncheck mui-scroll-wrapper">
 							<div class="mui-scroll">
 								<ul id="uncheck-list" class="mui-table-view">
 
@@ -57,7 +57,7 @@
 						</div>
 					</div>
 					<div id="news-passed" class="mui-slider-item mui-control-content">
-						<div class="mui-scroll-wrapper">
+						<div class="news-passed mui-scroll-wrapper">
 							<div class="mui-scroll">
 								<ul id="passed-list" class="mui-table-view">
 
@@ -66,7 +66,7 @@
 						</div>
 					</div>
 					<div id="news-unpass" class="mui-slider-item mui-control-content">
-						<div class="mui-scroll-wrapper">
+						<div class="news-unpass mui-scroll-wrapper">
 							<div class="mui-scroll">
 								<ul id="refused-list" class="mui-table-view">
 								</ul>
