点击作业提醒进入作业详情 返回逻辑未设置好

--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -56,7 +56,7 @@
 					</li>
 					<li id="check-news" class="mui-table-view-cell" position='8' style="display: none;">
 						<a class="mui-navigate-right">
-							<img src="../../image/mine/my-points.png" class="mine-icon"></img> 新闻审核
+							<img src="../../image/mine/news-check.png" class="mine-icon"></img> 新闻审核
 						</a>
 					</li>
 					<li class="mui-table-view-cell" position='5'>
