邀请新界面

--- a/JiaoBaoYun-hb/html/mine/qun_manage_1.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_1.html
@@ -308,7 +308,7 @@
 				mui('#popover').on('tap', 'button', function() {
 					console.log(this.id);
 					if(this.id == 'commit') {
-						events.openNewWindowWithData('qun_manage_invite.html', {
+						events.openNewWindowWithData('qun_manage_invite_a.html', {
 							gid: inviteOrCreate.gid, //群ID
 							gname: inviteOrCreate.gname, //群名
 							mstype: mstype, //被邀请成为的类型
