--- a/JiaoBaoYun-hb/html/mine/qun_manage_invite_a.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_invite_a.html
@@ -45,6 +45,7 @@
 				padding: 10px 10px;
 				padding-right: 35px;
 				color: #323232;
+				/*height: 40px;*/
 			}
 
 			input::-webkit-input-placeholder {
@@ -53,12 +54,12 @@
 			}
 
 			input:-moz-placeholder {
-				color: #808080=;
+				color: #808080;
 				/* Mozilla Firefox 4 to 18 */
 			}
 
 			input::-moz-placeholder {
-				color: #808080=;
+				color: #808080;
 				/* Mozilla Firefox 19+ */
 			}
 
@@ -69,10 +70,120 @@
 
 			#nouser {
 				/*无此用户*/
+				position: absolute;
 				text-align: center;
 				color: #808080;
-				visibility: hidden;
 				z-index: 1;
+				width: 100%;
+				background: white;
+				visibility: hidden;
+			}
+
+			#user {
+				/*搜索结果区域*/
+				z-index: 2;
+				color: #808080;
+				padding-top: 8px;
+				visibility: hidden;
+				margin-bottom: 1px;
+			}
+
+			.mui-table-view:before,
+			.mui-table-view:after {
+				height: 0px;
+			}
+
+			#user .mui-table-view-cell:last-child:after {
+				height: 1px;
+			}
+
+			#user.mui-table-view {
+				background-color: #f2f3f5;
+			}
+
+			#user .mui-table-view-cell {
+				background-color: white;
+			}
+
+			#user .mui-table-view-cell.mui-active {
+				background-color: #eee;
+			}
+
+			#unick {
+				/*搜索结果昵称*/
+				color: #323232;
+			}
+
+			#user_img {
+				/*用户头像*/
+				width: 40px;
+				height: 40px;
+				border-radius: 50%;
+			}
+
+			#qun_name {
+				/*群名*/
+				max-width: 80%;
+				width: auto;
+				float: left;
+			}
+
+			#data_sw img {
+				/*资料头像*/
+				border-radius: 50%;
+				height: 30px;
+				width: 30px;
+			}
+
+			.data-item {
+				/*资料*/
+				text-align: center;
+				box-shadow: 1px 1px 1px rgba(228, 228, 228, 0.5);
+				border: 1px solid rgba(228, 228, 228, 0.5);
+				border-radius: 5px;
+				padding: 8px 5px;
+			}
+
+			.data-item-click {
+				/*资料点击效果*/
+				border: 1px solid rgba(29, 184, 241, 0.5);
+			}
+
+			.mui-col-xs-3 {
+				/*资料*/
+				padding: 10px 10px;
+			}
+
+			.mui-scroll-wrapper {
+				/*资料滚动区域*/
+				/*bottom: 61px;*/
+				visibility: hidden;
+			}
+
+			#commit {
+				/*底部按钮*/
+				width: 95%;
+				left: 2.5%;
+				padding: 6px 12px 7px;
+			}
+
+			#commit_div {
+				/*底部按钮区域*/
+				width: 100%;
+				background-color: white;
+				border-top: 1px solid rgba(228, 228, 228, 0.4);
+				padding-top: 10px;
+				visibility: hidden;
+			}
+
+			.mui-btn-blue {
+				background-color: #1DB8F1;
+				border: 1px solid #1DB8F1;
+			}
+
+			.mui-btn-blue:active {
+				background-color: #e4e4e4 !important;
+				border: 1px solid #e4e4e4 !important;
 			}
 		</style>
 	</head>
@@ -84,33 +195,102 @@
 		</header>
 		<div class="mui-content">
 			<div id="inputArea" class="mui-input-row">
-				<label>搜索</label>
-				<input type="text" class="mui-input-clear" placeholder="请输入账号或手机号">
+				<label id="label_search">搜索</label>
+				<input id="input_search" type="text" class="mui-input-clear" maxlength="20" placeholder="请输入账号或手机号">
 			</div>
 			<div id="nouser">
 				<img id="nouser_img" src="../../image/mine/invite_none_0.png" />
-				<div>无此用户，请重新输入~~~</div>
+				<div id="nouser_text"></div>
 			</div>
-
+			<ul id="user" class="mui-table-view">
+				<li id="user_li" class="mui-table-view-cell mui-media">
+					<img id="user_img" class="mui-media-object mui-pull-left" src="../../image/utils/default_personalimage.png">
+					<div class="mui-media-body">
+						<div id="unick" class="mui-ellipsis">&nbsp;</div>
+						<div style="float: left;">[</div>
+						<div id="qun_name" class="mui-ellipsis"></div>
+						<div style="display: inline;">]</div>
+						<div id="qun_type" style="display: inline;"></div>
+					</div>
+				</li>
+				<li id="data_li" class="mui-table-view-cell" style="background-color: white;padding : 4px 0px;">
+					<div style="border-left: 3px solid #00a5e0;padding-left: 12px;line-height: 35px;">
+						请选择现有成员的资料
+					</div>
+				</li>
+			</ul>
+			<div id="data_sw" class="mui-scroll-wrapper">
+				<div class="mui-scroll">
+					<ul class="mui-table-view">
+						<div id="row_data" class="mui-row">
+						</div>
+					</ul>
+				</div>
+			</div>
+			<div id="commit_div">
+				<button id="commit" type="button" class="mui-btn mui-btn-blue mui-btn-block">确认</button>
+			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
-			var inputArea = document.getElementById("inputArea"); //搜索区域
 			var screenOption = {
 				height: localStorage.getItem('resolutionHeight') - localStorage.getItem('getStatusbarHeight'), //屏幕高度-状态栏高度
 				width: localStorage.getItem('resolutionWidth') //屏幕宽度
 			}; //屏幕参数
 			var main; //获取当前窗体对象
 			var mainData; //接收传入参数值
+			var type; //记录显示的成员类型
+			var userData = null; //当前搜索的成员
+			var allData = []; //记录查询的资料
+			var clickId = ''; //记录被点击的元素id
 
 			window.onload = function() {
 				init(); //初始化界面
+				initScroll(); //初始化滚动
 			}
 
 			mui.init();
 			mui.plusReady(function() {
 				initData(); //初始化数据
+				initListener(); //初始化监听
+				events.blurBack();
 			});
+
+			/**
+			 * 初始化界面
+			 */
+			function init() {
+				var inputArea = document.getElementById("inputArea"); //搜索区域
+				var nouser = document.getElementById("nouser");
+				var nouser_img = document.getElementById("nouser_img");
+				var user = document.getElementById("user");
+				var data_li = document.getElementById("data_li");
+				var data_sw = document.getElementById("data_sw");
+				var height = screenOption.height - inputArea.offsetHeight - inputArea.offsetTop - 10;
+				nouser.style.height = (height - user.offsetHeight - data_li.offsetHeight - 1) + 'px';
+				nouser.style.marginTop = user.offsetHeight + data_li.offsetHeight + 'px';
+				nouser_img.style.height = height / 2 + 'px';
+				nouser_img.style.marginTop = height / 6 + 'px';
+				data_sw.style.top = (user.offsetHeight + user.offsetTop) + 'px';
+				data_sw.style.height = (screenOption.height - data_sw.offsetTop - 61) + 'px';
+				document.getElementById("commit_div").style.marginTop = data_sw.offsetHeight + 'px';
+				//showNoUser(1, 1);
+			}
+
+			/**
+			 * 初始化滚动
+			 */
+			function initScroll() {
+				mui(".mui-scroll-wrapper").scroll({
+					scrollY: true, //是否竖向滚动
+					scrollX: false, //是否横向滚动
+					indicators: true, //是否显示滚动条
+					deceleration: 0.0006, //阻尼系数,系数越小滑动越灵敏
+					bounce: true, //是否启用回弹
+				});
+			}
 
 			/**
 			 * 初始化数据
@@ -125,31 +305,347 @@
 				//vtp: item.mstype //邀请人的类型（用户管理角色,0家长,1管理员,2老师,3学生）
 				//}
 				console.log('邀请群成员获得的数据:' + JSON.stringify(mainData));
+
+				switch(mainData.mstype) { //被邀请成为类型（0家长,2老师,3学生）
+					case 'student':
+						mainData.typestr = '学生';
+						mainData.type = '3';
+						break;
+					case 'teacher':
+						mainData.typestr = '老师';
+						mainData.type = '2';
+						break;
+					case 'parents':
+						mainData.typestr = '家长';
+						mainData.type = '0';
+						break;
+					default:
+						console.log('邀请群成员设置成员类型出错');
+						break;
+				}
+
+				document.getElementById("qun_name").innerText = mainData.gname;
+				document.getElementById("qun_type").innerText = '[' + mainData.typestr + ']';
 			}
 
 			/**
-			 * 初始化界面
+			 * 初始化监听
 			 */
-			function init() {
-				showNoUser(0); //无此用户
+			function initListener() {
+
+				//搜索
+				document.getElementById("label_search").addEventListener('tap', function() {
+					searchUser();
+				});
+
+				//查看搜索结果
+				document.getElementById('user_li').addEventListener('tap', function() {
+					document.getElementById("user_li").disabled = true;
+					events.openNewWindowWithData('qun_manage_invite_info.html', {
+						userData: userData //用户信息
+					});
+					setTimeout(function() {
+						document.getElementById("user_li").disabled = false;
+					}, 1500);
+				});
+
+				//点击资料
+				mui('#row_data').on('tap', '.mui-table-view-cell', function() {
+					document.activeElement.blur(); //隐藏键盘
+					var self = this;
+					console.log(self.id);
+					if(clickId == '') { //第一次点击资料
+						clickId = self.id;
+						self.className = 'mui-table-view-cell data-item data-item-click';
+					} else if(clickId == self.id) { //点击同一个资料
+						self.className = 'mui-table-view-cell data-item';
+						clickId == '';
+					} else {
+						document.getElementById(clickId).className = 'mui-table-view-cell data-item';
+						self.className = 'mui-table-view-cell data-item data-item-click';
+						clickId = self.id;
+					}
+				});
+
+				document.getElementById('commit').addEventListener('tap', function() {
+					console.log('确认');
+					invite();
+				});
 			}
 
 			/**
-			 * 显示无此用户
-			 * @param {Object} key 1,显示
+			 * 显示无此用户或资料
+			 * @param {Object} key 1显示;0隐藏
+			 * @param {Object} type 0用户;1资料
 			 */
-			function showNoUser(key) {
+			function showNoUser(key, type) {
 				var nouser = document.getElementById("nouser");
-				var nouser_img = document.getElementById("nouser_img");
-				var height = screenOption.height - inputArea.offsetHeight - inputArea.offsetTop - 10;
-				nouser.style.height = height + 'px';
-				nouser_img.style.height = height / 2 + 'px';
-				nouser_img.style.marginTop = height / 6 + 'px';
+				var nouser_text = document.getElementById("nouser_text");
+				var user = document.getElementById("user");
 				if(key == 1) {
 					nouser.style.visibility = 'visible';
 				} else {
 					nouser.style.visibility = 'hidden';
 				}
+				if(type == 0) {
+					nouser.style.marginTop = '0px';
+					nouser_text.innerHTML = '无此用户，请重新输入~~~';
+				} else {
+					nouser.style.marginTop = user.offsetHeight / 2 + 'px';
+					nouser_text.innerHTML = '成员资料查询为空~~~'
+				}
+			}
+
+			/**
+			 * 显示搜索用户结果
+			 * @param {Object} key 1显示;0隐藏
+			 */
+			function showUser(key) {
+				var user = document.getElementById("user");
+				if(key == 1) {
+					user.style.visibility = 'visible';
+					document.getElementById("user_img").src = updateHeadImg(userData.uimg, 2);
+					document.getElementById("unick").innerHTML = userData.unick;
+				} else {
+					user.style.visibility = 'hidden';
+					document.getElementById("user_img").src = updateHeadImg('', 2);
+					document.getElementById("unick").innerHTML = '';
+				}
+			}
+
+			/**
+			 * 显示资料
+			 * @param {Object} key 1显示;0隐藏
+			 */
+			function showDataSW(key) {
+				var data_sw = document.getElementById("data_sw");
+				if(key == 1) {
+					data_sw.style.visibility = 'visible';
+				} else {
+					data_sw.style.visibility = 'hidden';
+				}
+			}
+
+			/**
+			 * 显示确认按钮
+			 * @param {Object} key 1显示;0隐藏
+			 */
+			function showCommit(key) {
+				var commit_div = document.getElementById("commit_div");
+				if(key == 1) {
+					commit_div.style.visibility = 'visible';
+				} else {
+					commit_div.style.visibility = 'hidden';
+				}
+			}
+
+			/**
+			 * 显示资料
+			 */
+			function showData() {
+				for(var i = 0; i < allData.length; i++) {
+					//console.log('allData[' + i + '] ' + JSON.stringify(allData[i]));
+					var element = document.createElement('div');
+					element.className = 'mui-col-xs-3 mui-col-sm-3';
+					element.innerHTML = '<li id="li_' + allData[i].stuid + '" class="mui-table-view-cell data-item">\
+									<img src="' + updateHeadImg(allData[i].stuimg, 2) + '" />\
+									<p id="p_' + allData[i].stuid + '" class="mui-ellipsis"></p></li>';
+					document.getElementById("row_data").appendChild(element);
+					document.getElementById("p_" + allData[i].stuid).innerText = allData[i].stuname;
+				}
+			}
+
+			/**
+			 * 通过用户账号和手机号搜索用户
+			 */
+			function searchUser() {
+				showNoUser(0, 0); //隐藏无此用户
+				showUser(0); //清除上次搜索用户结果
+				showCommit(0); //隐藏确认按钮
+				showDataSW(0); //隐藏资料区域
+				document.getElementById("row_data").innerHTML = ''; //清空资料
+				clickId = ''; //清空资料元素id
+				document.activeElement.blur(); //隐藏键盘
+
+				var input_search = document.getElementById("input_search"); //搜索输入框
+				console.log('input_search.value ' + input_search.value);
+				var uid = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).uid; //账号电话
+				var uname = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).uname; //账号
+				if(input_search.value.replace(/(^\s*)|(\s*$)/g, "") == "") {
+					mui.toast('搜索不能为空');
+				} else if((mainData.type == '3' || mainData.type == '2') && (input_search.value == uid || input_search.value == uname)) {
+					if(mainData.type == '3') {
+						//不允许邀请自己成为学生
+						mui.toast('不能邀请自己成为学生');
+					} else {
+						//不允许邀请自己成为老师
+						mui.toast('不能邀请自己成为老师');
+					}
+				} else if(input_search.value.length > 20) {
+					mui.toast('搜索最多20字');
+				} else {
+					var wd = events.showWaiting();
+					var vtp = 'nm';
+					var phoneReg = /^(((13[0-9]{1})|(15[0-9]{1})|(18[0-9]{1}))+\d{8})$/; //手机号
+					var emailReg = /^[a-zA-Z0-9_-]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$/; //邮箱
+					if(phoneReg.test(input_search.value)) {
+						vtp = 'mb';
+					} else if(emailReg.test(input_search.value)) {
+						vtp = 'em';
+					}
+					//11.通过用户账号和手机号搜索用户
+					//需要参数
+					var comData2 = {
+						vvl: input_search.value, //查询的值
+						vtp: vtp //获取类型,nm(用户名),mb(手机号)
+					};
+					postDataPro_PostUList(comData2, wd, function(data) {
+						console.log('11.RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						if(data.RspCode == 0) {
+							for(var i = 0; i < data.RspData.length; i++) {
+								console.log('搜索结果 ' + JSON.stringify(data.RspData[i]));
+							}
+							userData = data.RspData[0];
+							showUser(1); //显示搜索用户结果
+							getDataInfo(); //查询资料
+						} else if(data.RspCode == 9999 || data.RspCode == 9) {
+							userData = null;
+							showNoUser(1, 0); //显示无此用户
+							mui.toast('该用户不存在');
+						} else {
+							userData = null;
+							mui.toast(data.RspTxt);
+							console.log('### ERROR ### 搜索 ###' + data.RspTxt);
+						}
+						wd.close();
+					});
+				}
+			}
+
+			/**
+			 * 获取群成员资料
+			 */
+			function getDataInfo() {
+				var wd = events.showWaiting();
+				var vtp = ''; //获取类型
+				var vvl1 = ''; //类型
+				var tempData = []; //记录有名称的资料
+				switch(mainData.mstype) { //被邀请成为类型（0家长,2老师,3学生）
+					case 'student':
+						vvl1 = '3';
+						vtp = '1';
+						break;
+					case 'teacher':
+						vvl1 = '2';
+						vtp = '1';
+						break;
+					case 'parents':
+						vvl1 = '3';
+						vtp = '0';
+						break;
+					default:
+						console.log('邀请群成员设置成员类型出错');
+						break;
+				}
+				//16.通过群ID获取群对象资料
+				//所需参数
+				var comData2 = {
+					vtp: vtp, //获取类型,0普通资料获取,1邀请排除
+					top: '-1', //选择条数,-1为全部
+					vvl: mainData.gid, //群ID,查询的值
+					vvl1: vvl1 //类型,0家长,1管理员,2老师,3学生,-1全部
+				};
+				postDataPro_PostGUInf(comData2, wd, function(data) {
+					console.log('16.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+						for(var i = 0; i < data.RspData.length; i++) {
+							if(data.RspData[i].stuname != '') {
+								tempData[tempData.length] = data.RspData[i];
+							}
+						}
+					} else {
+						if(data.RspCode != 9) {
+							mui.toast(data.RspTxt);
+							console.log('### ERROR ### 获取群对象资料 ###' + data.RspTxt);
+						}
+					}
+
+					if(data.RspCode != 404) {
+						showCommit(1);
+						if(tempData.length == 0) {
+							//查询为空
+							showNoUser(1, 1);
+							mui.toast('成员资料 查询记录为空');
+						} else {
+							showDataSW(1);
+						}
+						allData = tempData;
+						showData();
+					}
+					wd.close();
+				});
+			}
+
+			/**
+			 * 发送邀请
+			 */
+			function invite() {
+				var wd = events.showWaiting();
+				console.log('发送邀请 用户信息 ' + JSON.stringify(userData));
+				console.log('发送邀请 资料元素ID ' + clickId);
+				//判断与资料关系
+				var urel = ''; //与资料关系
+				var stuid = clickId.replace('li_', ''); //资料id
+				var chooseInfo = '0';
+				if(stuid != '') { //选择关联资料
+					if(mainData.mstype == 'parents') { //被邀请人类型为家长
+						urel = '爸爸'; //与资料关系
+					}
+					chooseInfo = stuid;
+				}
+				console.log('与资料关系：' + urel);
+				//判断邀请类型
+				var vtp = ''; //邀请类型
+				if(mainData.vtp == 1 || mainData.vtp == 2) { //邀请人为老师都设为0
+					vtp = '0';
+				} else {
+					vtp = '2';
+				}
+				console.log('邀请人类型 ' + mainData.vtp + ' 邀请类型 ' + vtp);
+				//12.邀请用户入群
+				//需要参数
+				var comData = {
+					gid: mainData.gid, //群ID
+					beinvutid: userData.utid, //被邀请人ID
+					beinvnick: userData.unick, //被邀请人昵称
+					mstype: mainData.type, //被邀请人类型,0家长,2老师,3学生
+					stat: '0', //入群状态,0待审,1同意
+					lnkinfid: chooseInfo, //关联资料ID,无资料关联填写0
+					urel: urel, //与资料关系,一般申请加入家长的时候填写,如爸爸,妈妈,其他类型留空
+					vtp: vtp //邀请类型,0老师邀请家长,1个人申请入群,2群员邀请群员
+				};
+				console.log('comData:' + JSON.stringify(comData));
+
+				postDataPro_PostInvGuser(comData, wd, function(data) {
+					wd.close();
+					console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+						mui.toast('已发送邀请');
+					} else if(data.RspCode == 9) {
+						if(data.RspTxt == '已有相同记录') {
+							mui.toast('已发送邀请成为 ' + mainData.typestr);
+						} else if(data.RspTxt == '违反身份互斥规则') {
+							if(mainData.typestr == '家长' || mainData.typestr == '老师') {
+								mui.toast(data.RspTxt + ' 已发送邀请成为 学生');
+							} else if(mainData.typestr == '学生') {
+								mui.toast(data.RspTxt + ' 已发送邀请成为 家长或老师');
+							}
+						}
+					} else {
+						mui.toast('邀请失败 ' + data.RspTxt);
+						console.log('### ERROR ### 邀请用户入群 ###' + data.RspTxt);
+					}
+				});
 			}
 		</script>
 	</body>
